tests/build/fail/widget/module_path_malformed2.rs
use zero_ui::core::widget;

#[widget($crate::widget, invalid)]
pub mod test_widget {}

fn main() {}
